--- a/frontend/covalent_challenge/src/index.css
+++ b/frontend/covalent_challenge/src/index.css
@@ -1,13 +1,33 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.marginDiv {
+  margin: 25px;
+}
+
+.marginTop {
+  margin-top: 30px;
+}
+
+.marginTopSlim {
+  margin-top: 12px;
+}
+
+.center {
+  margin: auto;
+  width: auto;
+  padding: 10px;
+  text-align: center;
+  justify-content: center;
 }
